//语言版本
syntax = "proto3";

//命名空间
option csharp_namespace = "GrpcGreeterClient";

//包
package user;

// 服务定义
service User {
  // 会话方法
  rpc GetUser (UserRequest) returns (UserReply);
}

// 请求参数格式
message UserRequest {
  string name = 1;
}

// 响应参数格式
message UserReply {
  string message = 1;
}